# SCC

./: .gitignore  README.md  pyproject.toml
src/scc/: __init__.py  __main__.py  app.py  board.py  board_view.py  claude_cli.py  cli.py  domain.py  layout.py  loader.py  query_flow.py  render.py  view.py
tests/: test_app.py  test_board.py  test_claude_cli.py  test_cli.py  test_layout.py  test_loader.py  test_query_flow.py  test_render.py  test_view.py
